--- a/fruities/adminarea/admin_templates/head/head.html
+++ b/fruities/adminarea/admin_templates/head/head.html
@@ -10,9 +10,9 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  {% comment %} <!-- Favicons -->
+   <!-- Favicons -->
   <link href="{%static 'img/favicon.png'%}" rel="icon">
-  <link href="{%static 'img/apple-touch-icon.png'%}" rel="apple-touch-icon"> {% endcomment %}
+  <link href="{%static 'img/apple-touch-icon.png'%}" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.gstatic.com" rel="preconnect">
