--- a/fruities/userarea/user_templates/main/index.html
+++ b/fruities/userarea/user_templates/main/index.html
@@ -100,7 +100,7 @@
 							<a href="single-product.html"><img src="{{x.image_1.url}}" alt=""></a>
 						</div>
 						<h3>{{x.product_name}}</h3>
-						<p class="product-price"><span>Per Kg</span>${{x.price}} </p>
+						<p class="product-price"><span>Per Kg</span>RS{{x.price}} </p>
 						<a href="{% url 'details' x.id %}" class="cart-btn">Shope Now</a>
 					</div>
 				</div>
