--- a/fruities/userarea/user_templates/main/singleproduct.html
+++ b/fruities/userarea/user_templates/main/singleproduct.html
@@ -20,7 +20,7 @@
 					<div class="single-product-content">
 						<h3>{{pro.product_name}}</h3>
 						<input type="hidden" name="product_id" value="{{ pro.id }}">
-						<p class="single-product-pricing"><span>Per Kg</span>RS {{pro.price}}</p>
+						<p class="single-product-pricing"><span>Per Kg</span>₹ {{pro.price}}</p>
 						<p>{{pro.description}}</p>
 						
 						<div class="single-product-form">
