--- a/fruities/adminarea/admin_templates/lead/admin_panel.html
+++ b/fruities/adminarea/admin_templates/lead/admin_panel.html
@@ -42,18 +42,18 @@
           <span>Orders</span>
         </a>
       </li><!-- End Register Page Nav -->
-      <li class="nav-item">
+      {% comment %} <li class="nav-item">
         <a class="nav-link collapsed" href="{% url 'viewcoupon' %}">
             <i class="bi bi-card-list"></i>
           <span>coupon</span>
         </a>
-      </li>
-      <li class="nav-item">
+      </li> {% endcomment %}
+      {% comment %} <li class="nav-item">
         <a class="nav-link collapsed" href="{% url 'addcoupon' %}">
             <i class="bi bi-card-list"></i>
           <span>Add coupon</span>
         </a>
-      </li><!-- End Register Page Nav -->
+      </li><!-- End Register Page Nav --> {% endcomment %}
       <li class="nav-item">
         <a class="nav-link collapsed" href="{% url 'salesreport' %}">
             <i class="bi bi-card-list"></i>
