--- a/fruities/adminarea/admin_templates/lead/user_list.html
+++ b/fruities/adminarea/admin_templates/lead/user_list.html
@@ -43,7 +43,7 @@
         <span>Orders</span>
       </a>
     </li><!-- End Register Page Nav -->
-    <li class="nav-item">
+    {% comment %} <li class="nav-item">
       <a class="nav-link collapsed" href="{% url 'viewcoupon' %}">
           <i class="bi bi-card-list"></i>
         <span>coupon</span>
@@ -54,7 +54,7 @@
           <i class="bi bi-card-list"></i>
         <span>Add coupon</span>
       </a>
-    </li><!-- End Register Page Nav -->
+    </li><!-- End Register Page Nav --> {% endcomment %}
     <li class="nav-item">
       <a class="nav-link collapsed" href="{% url 'salesreport' %}">
           <i class="bi bi-card-list"></i>
