--- a/fruities/userarea/user_templates/main/index.html
+++ b/fruities/userarea/user_templates/main/index.html
@@ -100,7 +100,7 @@
 							<a href="single-product.html"><img src="{{x.image_1.url}}" alt=""></a>
 						</div>
 						<h3>{{x.product_name}}</h3>
-						<p class="product-price"><span>Per Kg</span>₹{{x.price}} </p>
+						<p class="product-price"><span>Per Kg</span>₹ {{x.price}} </p>
 						<a href="{% url 'details' x.id %}" class="cart-btn">Shope Now</a>
 					</div>
 				</div>
@@ -130,7 +130,7 @@
                 </div>
                 <!--Content Column-->
                 <div class="content-column col-lg-6">
-					<h3><span class="orange-text">Health Benefits</span> of <br>Strwaberry</h3>
+					<h3><span class="orange-text">Health Benefits</span> of <br><br>Strwaberry</h3>
                     <h4>Strwaberry</h4>
                     <div class="text"> Consuming strawberries can have several health benefits. The high vitamin C content helps boost the immune system and promotes healthy skin. The antioxidants present in strawberries have been associated with reducing inflammation and oxidative stress, which may help lower the risk of chronic diseases.</div>
                     <!--Countdown Timer-->
