--- a/fruities/userarea/user_templates/main/order_completed.html
+++ b/fruities/userarea/user_templates/main/order_completed.html
@@ -89,7 +89,7 @@
     
           <div class="col-xl-5 ml-4">
             <h4><ul class="list-unstyled ">
-              <li class="text-muted ms-3"><span class="text-black me-4">SubTotal: </span>{{item.subtotal}}</li>
+              {% comment %} <li class="text-muted ms-3"><span class="text-black me-4">SubTotal: </span>{{subtotal}}</li> {% endcomment %}
               <li class="text-muted ms-3 mt-2"><span class="text-black me-4">Shipping charge : </span> Rs. 50</li>
               {% comment %} <li class="text-muted ms-3"><span class="text-black me-4"> Sum Total: </span><span>{{order.order_total}}</span></li> {% endcomment %}
                 {% comment %} <li class="text-muted ms-3"><span class="text-black me-4"> Discount: </span><span>{{order.order_discount}}</span></li> {% endcomment %}
