--- a/fruities/adminarea/admin_templates/lead/add_category.html
+++ b/fruities/adminarea/admin_templates/lead/add_category.html
@@ -7,7 +7,7 @@
 
 {% comment %} <div class="text-center mx-auto mt-2">{% include 'includes/alerts.html' %}</div> {% endcomment %}
 
-<<!-- ======= Sidebar ======= -->
+<!-- ======= Sidebar ======= -->
 <aside id="sidebar" class="sidebar">
   
   <ul class="sidebar-nav" id="sidebar-nav">
