--- a/fruities/adminarea/admin_templates/lead/sales_report.html
+++ b/fruities/adminarea/admin_templates/lead/sales_report.html
@@ -77,7 +77,7 @@
     <div class="card-body">
         <h5 class="p-2 text-center" style="border-bottom: 2px solid orange;">Sales Report</h5>
         <div class="container-fluid">
-            <form method="POST" class="form-inline mb-3 d-flex">
+            <form method="GET" class="form-inline mb-3 d-flex">
                 {% csrf_token %}
                 <div class="form-group col-2 mr-2" style="margin-right:20px;">
                     <label for="from_date">From:</label>
